# pdfathom

./: .gitignore  README.md  justfile  pyproject.toml
pdfathom/: __main__.py  arguments.py  config.py  db.py  loader.py  repl.py
